--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,11 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
+      - name: Install NuGet CLI
+        uses: NuGet/setup-nuget@v2
 
-      - name: Restore dependencies
-        run: dotnet restore MatKinhShadyTest.sln
+      - name: Restore NuGet packages
+        run: nuget restore MatKinhShadyTest.sln
 
       - name: Build the solution
         run: dotnet build MatKinhShadyTest.sln --configuration Release --no-restore
