--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: Run Web Auto Tests
 
 on:
   push:
-    branches: [ "ci" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "ci" ]
+    branches: [ "master" ]
 
 jobs:
   test:
